[package]
name = "acid64c"
version = "1.0.9"
authors = ["Wilfred Bos"]
description = "ACID64 Console SID player."
readme = "README.md"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["acid64-player", "sidplayer", "c64-music-player", "sid-6581", "sid-8580"]
build = "build.rs"

[dependencies]
ahash = "0.8.11"
atomicring = "1.2.9"
attohttpc = { version = "0.28.0", features = ["multipart-form"] }
chrono = "0.4"
crossterm = "0.28"
encoding = "0.2"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
if-addrs = "0.13.3"
libloading = "0.8"
parking_lot = "0.12"
timer = "0.2"
thread-priority = "1.2.0"

[dependencies.libftd2xx]
version = "0.33.0"
features = ["static"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Media"
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "ACID64 Console Player"
LegalCopyright = "Copyright © 2003 - 2024 Wilfred Bos"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
