[package]
name = "acid64c"
version = "1.0.10"
authors = ["Wilfred Bos"]
description = "ACID64 Console SID player."
readme = "README.md"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["acid64-player", "sidplayer", "c64-music-player", "sid-6581", "sid-8580"]
build = "build.rs"

[dependencies]
ahash = "0.8"
atomicring = "1.2"
attohttpc = { version = "0.30", features = ["multipart-form"] }
chrono = "0.4"
crossterm = "0.29"
encoding = "0.2"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
if-addrs = "0.14"
libloading = "0.8"
parking_lot = "0.12"
timer = "0.2"
thread-priority = "2.0"

[dependencies.libftd2xx]
version = "0.33"
features = ["static"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Media"
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "ACID64 Console Player"
LegalCopyright = "Copyright © 2003 - 2025 Wilfred Bos"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
